--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,30 @@
 click==7.1.2
+dnspython==2.3.0
 dominate==2.5.2
+email-validator==1.3.1
+et-xmlfile==1.1.0
 Flask==1.1.2
 Flask-Bootstrap==3.3.7.1
+Flask-CKEditor==0.4.6
 Flask-Login==0.5.0
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
+greenlet==2.0.2
+gunicorn==20.1.0
+idna==3.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+numpy==1.24.2
+openpyxl==3.1.1
+pandas==1.5.3
+PyMySQL==1.0.2
+python-dateutil==2.8.2
+pytz==2022.7.1
+six==1.16.0
 SQLAlchemy==1.3.20
+typing_extensions==4.4.0
 visitor==0.1.3
 Werkzeug==1.0.1
 WTForms==2.3.3
-gunicorn==20.1.0
-xlwt~=1.3.0
-pandas~=1.5.3
-PyMySQL~=1.0.2
+xlwt==1.3.0
