--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ MarkupSafe==1.1.1
 numpy==1.24.2
 openpyxl==3.1.1
 pandas==1.5.3
+psycopg2==2.9.5
 PyMySQL==1.0.2
 python-dateutil==2.8.2
 pytz==2022.7.1
